[package]
name = "carter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ratspie = { path = "../ratspie" }
ratspie = { git = "https://github.com/luukvanderduim/ratspie.git" }
zbus = { version = "2.1.1", default-features = false, features = ["tokio"] }
zbus_names = "2.1.0"
zvariant = "3.1.2"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
serde = "1.0.136"
byteorder = "1.4.3"
futures-concurrency = "2.0.0"
futures-lite = "1.12.0"
